<resources>
    <string name="app_name">Diaspora</string>
    <string name="CriarConta">Criar Conta</string>
    <string name="entrarComFacebok">Entrar com Facebook.</string>
    <string name="DigiteSenha">Digite sua senha</string>
    <string name="DigiteSeuLogin">Digite seu login</string>
    <string name="BemVindo">Seja Bem \n Vind@</string>
    <string name="title_activity_user_main_page">UserMainPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="username">Arthur Gomes</string>
    <string name="usermail">arthur.gomes@gmail.com</string>
    <string name="perfil">Perfil</string>
    <string name="meus_ancuncios">Meus Anúncios</string>
    <string name="adicionar_anuncios">Adicionar Anúncios</string>
    <string name="mensagens">Mensagens</string>
    <string name="calendario">Calendário</string>
    <string name="faturas">Faturas</string>
    <string name="compras">Compras</string>
</resources>
